{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 30,
  "lineage": "dee36418-431b-021f-8921-a325dae2e475",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-076c6dbba59aa92e6",
            "arn": "arn:aws:ec2:ap-south-1:442426863025:instance/i-0405aeeeb676514cb",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0405aeeeb676514cb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vgs_mumbai",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0140f02e156ea0e11",
            "private_dns": "ip-10-0-1-33.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.33",
            "public_ip": "3.108.56.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08313ec312c2de00c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04a423d9d010753fa",
            "tags": {
              "Name": "webserver_1"
            },
            "tags_all": {
              "Name": "webserver_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0885fcf8891897c93"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.public_sg",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-076c6dbba59aa92e6",
            "arn": "arn:aws:ec2:ap-south-1:442426863025:instance/i-01d7da0ca92e470f2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01d7da0ca92e470f2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vgs_mumbai",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a300b06fd7fde6e4",
            "private_dns": "ip-10-0-2-242.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.242",
            "public_ip": "13.232.96.182",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09df3ddc6962363e6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0abbff583d79a924f",
            "tags": {
              "Name": "webserver_2"
            },
            "tags_all": {
              "Name": "webserver_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0885fcf8891897c93"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.public_sg",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_applb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:442426863025:loadbalancer/app/tf-lb-20250405070748206500000004/e9b418cbd58f21a8",
            "arn_suffix": "app/tf-lb-20250405070748206500000004/e9b418cbd58f21a8",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20250405070748206500000004-1632068747.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:442426863025:loadbalancer/app/tf-lb-20250405070748206500000004/e9b418cbd58f21a8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20250405070748206500000004",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0885fcf8891897c93"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04a423d9d010753fa"
              },
              {
                "subnet_id": "subnet-0abbff583d79a924f"
              }
            ],
            "subnets": [
              "subnet-04a423d9d010753fa",
              "subnet-0abbff583d79a924f"
            ],
            "tags": {
              "Name": "Application_lb"
            },
            "tags_all": {
              "Name": "Application_lb"
            },
            "vpc_id": "vpc-06bbc59105d0474e9",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.vpc.aws_security_group.public_sg",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:442426863025:listener/app/tf-lb-20250405070748206500000004/e9b418cbd58f21a8/bce1b469ccbd815c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:442426863025:targetgroup/tf-20250405070744885400000001/12b582eaf9fa9b7c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:442426863025:listener/app/tf-lb-20250405070748206500000004/e9b418cbd58f21a8/bce1b469ccbd815c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:442426863025:loadbalancer/app/tf-lb-20250405070748206500000004/e9b418cbd58f21a8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elb.aws_lb.my_applb",
            "module.elb.aws_lb_target_group.target_group",
            "module.vpc.aws_security_group.public_sg",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:442426863025:targetgroup/tf-20250405070744885400000001/12b582eaf9fa9b7c",
            "arn_suffix": "targetgroup/tf-20250405070744885400000001/12b582eaf9fa9b7c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:442426863025:targetgroup/tf-20250405070744885400000001/12b582eaf9fa9b7c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20250405070744885400000001",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06bbc59105d0474e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachment_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:442426863025:targetgroup/tf-20250405070744885400000001/12b582eaf9fa9b7c-20250405071028679500000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:442426863025:targetgroup/tf-20250405070744885400000001/12b582eaf9fa9b7c",
            "target_id": "i-0405aeeeb676514cb"
          },
          "dependencies": [
            "module.ec2.aws_instance.web_1",
            "module.elb.aws_lb_target_group.target_group",
            "module.vpc.aws_security_group.public_sg",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachment_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:442426863025:targetgroup/tf-20250405070744885400000001/12b582eaf9fa9b7c-20250405071009066600000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:442426863025:targetgroup/tf-20250405070744885400000001/12b582eaf9fa9b7c",
            "target_id": "i-01d7da0ca92e470f2"
          },
          "dependencies": [
            "module.ec2.aws_instance.web_2",
            "module.elb.aws_lb_target_group.target_group",
            "module.vpc.aws_security_group.public_sg",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "myeip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05c424d0120d6a738",
            "domain": "vpc",
            "id": "eipalloc-05c424d0120d6a738",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-108-150-148.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.108.150.148",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "myeip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0351e758dfe4a09f0",
            "domain": "vpc",
            "id": "eipalloc-0351e758dfe4a09f0",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-201-254-159.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.254.159",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442426863025:internet-gateway/igw-0051eb17d93eb2d44",
            "id": "igw-0051eb17d93eb2d44",
            "owner_id": "442426863025",
            "tags": {
              "Name": "Internet-gateway"
            },
            "tags_all": {
              "Name": "Internet-gateway"
            },
            "vpc_id": "vpc-06bbc59105d0474e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05c424d0120d6a738",
            "association_id": "eipassoc-0b2cb86087ba58995",
            "connectivity_type": "public",
            "id": "nat-09a0c51eb28d19649",
            "network_interface_id": "eni-06b744ec55e41e80b",
            "private_ip": "10.0.1.216",
            "public_ip": "3.108.150.148",
            "subnet_id": "subnet-04a423d9d010753fa",
            "tags": {
              "Name": "gw_NAT_1"
            },
            "tags_all": {
              "Name": "gw_NAT_1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.myeip1",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0351e758dfe4a09f0",
            "association_id": "eipassoc-021ef57c17d182d4a",
            "connectivity_type": "public",
            "id": "nat-0975d66f65cb1e57c",
            "network_interface_id": "eni-031d32fc1e54d6f1c",
            "private_ip": "10.0.2.126",
            "public_ip": "13.201.254.159",
            "subnet_id": "subnet-0abbff583d79a924f",
            "tags": {
              "Name": "gw_NAT_2"
            },
            "tags_all": {
              "Name": "gw_NAT_2"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.myeip2",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442426863025:route-table/rtb-0d2a3a33de361ba22",
            "id": "rtb-0d2a3a33de361ba22",
            "owner_id": "442426863025",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-09a0c51eb28d19649",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rt1"
            },
            "tags_all": {
              "Name": "private_rt1"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bbc59105d0474e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.myeip1",
            "module.vpc.aws_nat_gateway.nat_1",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442426863025:route-table/rtb-0614215dab2de7544",
            "id": "rtb-0614215dab2de7544",
            "owner_id": "442426863025",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0975d66f65cb1e57c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rt2"
            },
            "tags_all": {
              "Name": "private_rt2"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bbc59105d0474e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.myeip2",
            "module.vpc.aws_nat_gateway.nat_2",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442426863025:route-table/rtb-0d7f6e889e4e4d609",
            "id": "rtb-0d7f6e889e4e4d609",
            "owner_id": "442426863025",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0051eb17d93eb2d44",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt1"
            },
            "tags_all": {
              "Name": "public_rt1"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bbc59105d0474e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442426863025:route-table/rtb-094ae4c3cfec2a90a",
            "id": "rtb-094ae4c3cfec2a90a",
            "owner_id": "442426863025",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0051eb17d93eb2d44",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt2"
            },
            "tags_all": {
              "Name": "public_rt2"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bbc59105d0474e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_ass1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d301cd846f0e9141",
            "route_table_id": "rtb-0d2a3a33de361ba22",
            "subnet_id": "subnet-0084fb3c81dcbafd7"
          },
          "dependencies": [
            "module.vpc.aws_eip.myeip1",
            "module.vpc.aws_nat_gateway.nat_1",
            "module.vpc.aws_route_table.private_rt_1",
            "module.vpc.aws_subnet.private_subnet_1",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_ass2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e49137868724dcf6",
            "route_table_id": "rtb-0614215dab2de7544",
            "subnet_id": "subnet-0d790c98a76232902"
          },
          "dependencies": [
            "module.vpc.aws_eip.myeip2",
            "module.vpc.aws_nat_gateway.nat_2",
            "module.vpc.aws_route_table.private_rt_2",
            "module.vpc.aws_subnet.private_subnet_2",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_ass1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0337829c0322ab0e3",
            "route_table_id": "rtb-0d7f6e889e4e4d609",
            "subnet_id": "subnet-04a423d9d010753fa"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt_1",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_ass2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01217352aec43e18e",
            "route_table_id": "rtb-094ae4c3cfec2a90a",
            "subnet_id": "subnet-0abbff583d79a924f"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt_2",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442426863025:security-group/sg-0130f1797bbadd05f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0130f1797bbadd05f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_ssh_http_mysql",
            "name_prefix": "",
            "owner_id": "442426863025",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls_mysql"
            },
            "tags_all": {
              "Name": "allow_tls_mysql"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bbc59105d0474e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442426863025:security-group/sg-0885fcf8891897c93",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0885fcf8891897c93",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_ssh_http",
            "name_prefix": "",
            "owner_id": "442426863025",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bbc59105d0474e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442426863025:subnet/subnet-0084fb3c81dcbafd7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0084fb3c81dcbafd7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442426863025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_subnet_1"
            },
            "tags_all": {
              "Name": "Private_subnet_1"
            },
            "vpc_id": "vpc-06bbc59105d0474e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442426863025:subnet/subnet-0d790c98a76232902",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d790c98a76232902",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442426863025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_subnet_2"
            },
            "tags_all": {
              "Name": "Private_subnet_2"
            },
            "vpc_id": "vpc-06bbc59105d0474e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442426863025:subnet/subnet-04a423d9d010753fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a423d9d010753fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442426863025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_subnet_1"
            },
            "tags_all": {
              "Name": "Public_subnet_1"
            },
            "vpc_id": "vpc-06bbc59105d0474e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442426863025:subnet/subnet-0abbff583d79a924f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abbff583d79a924f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442426863025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_subnet_2"
            },
            "tags_all": {
              "Name": "Public_subnet_2"
            },
            "vpc_id": "vpc-06bbc59105d0474e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442426863025:vpc/vpc-06bbc59105d0474e9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e508f3fafc15c4fd",
            "default_route_table_id": "rtb-031177bd12d6a8b03",
            "default_security_group_id": "sg-0df6c95155e94b1ef",
            "dhcp_options_id": "dopt-0948b1958e947df19",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06bbc59105d0474e9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-031177bd12d6a8b03",
            "owner_id": "442426863025",
            "tags": {
              "Name": "vpc"
            },
            "tags_all": {
              "Name": "vpc"
            }
          }
        }
      ]
    }
  ]
}